Fixing bg color on login page, adding CSS to hide date/time and main navbar on mobile

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -62,6 +62,17 @@
     padding-bottom: 20px;
 }
 
+@media (max-width: 768px) {
+    .header-date-time {
+        display: none;
+    }
+
+    #main-nav {
+        display: none;
+    }
+}
+
+
 /* Navigation bar */
 #main-nav {
     display: flex;
